--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,19 @@
     <string name="conteudo_do_banner_inicial">Banner inicial dos pacotes</string>
     <string name="especiais">Especiais</string>
     <string name="pais">Brasil</string>
+    <string name="preco_final">Preço final:</string>
+    <string name="realizar_pagamento">REALIZAR PAGAMENTO</string>
+    <string name="imagem_do_pacote">imagem do pacote</string>
+    <string name="finalizar_compra">FINALIZAR COMPRA</string>
+    <string name="pagamento_orientacao">Digite as informações do cartão de crédito que você deseja usar para o pagamento</string>
+    <string name="valor_da_compra">Valor da compra:</string>
+    <string name="numero_do_cartao">Número do cartão</string>
+    <string name="mes_do_cartao">MM</string>
+    <string name="ano_do_cartao">AA</string>
+    <string name="cvc_do_cartao">CVC</string>
+    <string name="nome_no_cartao">Nome no cartão</string>
+    <string name="mascara_nome_no_cartao">abcdefghijklmnopqrstuvwxyzç ABCDEFGHIJKLMNOPQRSTUVWXYZÇ</string>
+    <string name="parabens">Parabéns!</string>
+    <string name="compra_realizada">Compra realizada com sucesso :)</string>
+    <string name="confira_resumo">Confira o resumo da compra:</string>
 </resources>
